fix parameters
